--- a/Text-Trade/Text-Trade/View/Base.lproj/Main.storyboard
+++ b/Text-Trade/Text-Trade/View/Base.lproj/Main.storyboard
@@ -246,13 +246,28 @@
                                 <rect key="frame" x="0.0" y="257" width="414" height="468"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="profileCell" id="KrZ-fy-5we">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="profileCell" id="KrZ-fy-5we" customClass="ProfilePageTableViewCell" customModule="Text_Trade" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KrZ-fy-5we" id="Ytp-CL-PA7">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tSW-Gg-cib">
+                                                    <rect key="frame" x="30" y="11.5" width="42" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="tSW-Gg-cib" firstAttribute="centerY" secondItem="Ytp-CL-PA7" secondAttribute="centerY" id="42l-Zv-bnu"/>
+                                                <constraint firstItem="tSW-Gg-cib" firstAttribute="leading" secondItem="Ytp-CL-PA7" secondAttribute="leadingMargin" constant="10" id="odr-26-44b"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="titleLabel" destination="tSW-Gg-cib" id="hoI-yx-eP3"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
