--- a/Text-Trade/Text-Trade/View/FeedTableViewCell.xib
+++ b/Text-Trade/Text-Trade/View/FeedTableViewCell.xib
@@ -57,6 +57,14 @@
                                 <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bookmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="CLd-XK-5Ws">
+                                <rect key="frame" x="324" y="58" width="30" height="30"/>
+                                <color key="tintColor" red="1" green="0.59999999999999998" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="Kwj-qD-j7x"/>
+                                    <constraint firstAttribute="width" secondItem="CLd-XK-5Ws" secondAttribute="height" multiplier="1:1" id="flD-yz-ljt"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                         <constraints>
@@ -68,9 +76,11 @@
                             <constraint firstAttribute="trailing" secondItem="Lqo-DM-VoM" secondAttribute="trailing" constant="8" id="Sog-R1-bl2"/>
                             <constraint firstItem="ycA-QB-ega" firstAttribute="top" secondItem="GL4-b6-I6e" secondAttribute="bottom" constant="2" id="TCU-4q-wnt"/>
                             <constraint firstItem="GL4-b6-I6e" firstAttribute="leading" secondItem="s5C-Gm-NGh" secondAttribute="trailing" constant="15" id="TVf-6z-40s"/>
+                            <constraint firstItem="CLd-XK-5Ws" firstAttribute="centerY" secondItem="J5U-JO-wNM" secondAttribute="centerY" id="TgK-Po-Tsg"/>
                             <constraint firstItem="Lqo-DM-VoM" firstAttribute="leading" secondItem="s5C-Gm-NGh" secondAttribute="trailing" constant="15" id="ZBy-2g-UEH"/>
                             <constraint firstItem="X5x-QA-FYF" firstAttribute="top" secondItem="Lqo-DM-VoM" secondAttribute="bottom" constant="2" id="cz9-gc-NRI"/>
                             <constraint firstAttribute="bottom" secondItem="aoD-m3-Lob" secondAttribute="bottom" constant="25" id="eIw-7O-xqi"/>
+                            <constraint firstAttribute="trailing" secondItem="CLd-XK-5Ws" secondAttribute="trailing" constant="30" id="f91-gb-Mep"/>
                             <constraint firstItem="aoD-m3-Lob" firstAttribute="leading" secondItem="s5C-Gm-NGh" secondAttribute="trailing" constant="15" id="hfV-33-8wN"/>
                             <constraint firstItem="s5C-Gm-NGh" firstAttribute="leading" secondItem="J5U-JO-wNM" secondAttribute="leading" constant="15" id="hun-ZS-OCu"/>
                             <constraint firstItem="aoD-m3-Lob" firstAttribute="top" secondItem="X5x-QA-FYF" secondAttribute="bottom" constant="2" id="j4n-WG-jpt"/>
@@ -94,8 +104,12 @@
                 <outlet property="profileImageView" destination="s5C-Gm-NGh" id="kxC-Zx-qar"/>
                 <outlet property="subtitleLabel" destination="ycA-QB-ega" id="Ohk-UV-aNx"/>
                 <outlet property="usernameLabel" destination="GL4-b6-I6e" id="lCc-nN-5EI"/>
+                <outlet property="wishListImageView" destination="CLd-XK-5Ws" id="gJ2-H7-1EC"/>
             </connections>
             <point key="canvasLocation" x="184.05797101449278" y="124.21875"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="bookmark" catalog="system" width="56" height="64"/>
+    </resources>
 </document>
